[tool.poetry]
name = "mab-forge"
version = "0.1.0"
description = "Toolset for generating Multi-Armed Bandit problems according to a user-defined difficulty"
authors = ["Giovanni Gatti Pinheiro <giovanni.gatti.pinheiro@gmail.com>"]
maintainers = ["Giovanni Gatti Pinheiro <giovanni.gatti.pinheiro@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    #    "License :: OSI Approuved :: MIT License",
    "Operating System :: OS Independent",
    # TODO: check for other pipy classifiers at https://pypi.org/classifiers/
]

[project.urls]
Homepage = "https://github.com/GiovanniGatti/mab-forge"
Issues = "https://github.com/GiovanniGatti/mab-forge/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.15.0"
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
tox = "^4.23.2"

[tool.poetry.group.build.dependencies]
setuptools = "^75.7.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::RuntimeWarning",
]
